Correct meta_workspace_list_windows annotation.

https://bugzilla.gnome.org/show_bug.cgi?id=591912